# s3_reader

./: .gitignore  LICENSE  README.md  build.bat  pyproject.toml
src/s3_reader/: __init__.py  main.py  s3_reader.py
